--- a/src/taskpane/taskpane.html
+++ b/src/taskpane/taskpane.html
@@ -12,6 +12,18 @@
 
     <!-- Office JavaScript API -->
     <script type="text/javascript" src="https://appsforoffice.microsoft.com/lib/1/hosted/office.js"></script>
+    
+    <!-- Custom CSS for animations -->
+    <style>
+        @keyframes spin {
+            0% {
+                transform: rotate(0deg);
+            }
+            100% {
+                transform: rotate(360deg);
+            }
+        }
+    </style>
 </head>
 
 <body style="width: 100%; height: 100%; margin: 0; padding: 0;">
